--- a/react-jison-docker/package.json
+++ b/react-jison-docker/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
+    "ace-builds": "^1.4.12",
+    "animate.css": "^4.1.1",
+    "bulma": "^0.9.2",
+    "foundation-sites": "^6.6.3",
     "react": "^17.0.1",
+    "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "uikit": "^3.6.17",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
