--- a/react-jison-docker/package.json
+++ b/react-jison-docker/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.8.0",
     "ace-builds": "^1.4.12",
     "animate.css": "^4.1.1",
+    "awesome-typescript-loader": "^5.2.1",
     "bulma": "^0.9.2",
     "foundation-sites": "^6.6.3",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "typescript": "^4.2.2",
     "uikit": "^3.6.17",
     "web-vitals": "^1.1.0"
   },
