--- a/react-jison-docker/package.json
+++ b/react-jison-docker/package.json
@@ -15,7 +15,8 @@
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.2",
+    "tsc": "^1.20150623.0",
+    "typescript": "^4.2.3",
     "uikit": "^3.6.17",
     "web-vitals": "^1.1.0"
   },
